other/generic-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: -deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: appimage
        image: appimage
        ports:
        - containerPort: 80
