other/generic-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: -ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: -service
          servicePort: 80
